Fixed vertical overflow

--- a/application/view/css/footer.css
+++ b/application/view/css/footer.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 75px;
   display: block;
-  position: absolute;
+  position: relative;
   bottom: 0;
 }
 
