--- a/application/view/css/navbar.css
+++ b/application/view/css/navbar.css
@@ -1,7 +1,3 @@
-#navbar-placeholder {
-  height: 78px;
-}
-
 .navbar {
   background-color: #494949;
 }
