--- a/application/view/css/profilePicture.less
+++ b/application/view/css/profilePicture.less
@@ -13,9 +13,9 @@
   width: @circle-size;
   height: @circle-size;
 
-  position: absolute;
-  left: 20%;
-  top: 100px;
+  float: none;
+  margin-top: 100px;
+  margin-bottom: 100px;
 
   .circle {
     .mask, .fill, .shadow {
